--- a/ruch_project/person1.html
+++ b/ruch_project/person1.html
@@ -1,64 +1,93 @@
+<!doctype html>
 <html lang="th">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Person 1 — Portfolio</title>
-<link rel="stylesheet" href="styles.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Portfolio — Jirapol</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="site-header">
-        <div class="container header-flex">
-            <h1 class="brand">Person 1</h1>
-            <nav class="nav" id="main-nav-1">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="person1.html" class="nav-link">Person 1</a>
-                <a href="person2.html" class="nav-link">Person 2</a>
-            </nav>
-            <button id="menu-toggle-1" class="menu-toggle">☰</button>
+  <header class="site-header">
+    <div class="container">
+      <h1 class="brand">Jirapol</h1>
+      <nav class="nav" id="main-nav">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="#about" class="nav-link">About Me</a>
+        <a href="#showcase" class="nav-link">Showcase</a>
+        <a href="#contact" class="nav-link">Contact</a>
+        <a href="#Experience" class="nav-link">Experience</a>
+      </nav>
+      <button id="random-color-btn" class="btn">🎨 Random Color</button>
+      <button id="menu-toggle" class="menu-toggle">☰</button>
+    </div>
+  </header>
+
+  <main class="container person-page">
+    <section class="about card" id="about">
+      <h2>About Me</h2>
+      <div class="about-grid">
+        <div class="avatar-wrapper" tabindex="0">
+          <img src="tar.jpg" alt="Jirapol">
         </div>
-    </header>
+        <div>
+          <h3>Jirapol Pongthong</h3>
+          <p><strong>Age:</strong> 20</p>
+          <p><strong>University:</strong> King Mongkut's Institute of Technology Ladkrabang</p>
+          <p><strong>Major:</strong> Computer Engineering</p>
+          <p><strong>Hobbies:</strong> Coding, Reading Books</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="showcase card" id="showcase">
+      <h2>Showcase</h2>
+      <ul>
+        <li><strong>Project</strong> — ทำโปรเจคเเข่งขันในการเเข่งขัน Rubber Authority of Thailand </li>
+        <li><strong>Skills</strong> — Web Development (HTML, CSS, JS), Python, Data Science, C ,C++</li>
+        <li><strong>Experience</strong> — Participated in International Science Competitions call(WICE)</li>
+      </ul>
+    </section>
+
+    <section class="contact card" id="contact" style="padding:20px; border-radius:12px;">
+        <h2>Contact</h2>
+        <div style="display:flex; align-items:center; gap: 8px ;margin-bottom:10px; ">
+          <img src="github.png" alt="GitHub" style="width:30px; height:30px; margin: 0 0;">
+          <p style="margin:0; font-weight:bold;">GitHub : </p>
+          <a href="https://github.com/Jirapol-Pongthong" style="color: black; ">Jirapol-Pongthong</a>
+        </div>
+        <div style="display:flex; align-items:center; gap: 8px ;margin-bottom:10px; ">
+          <img src="gmail.png" alt="GitHub" style="width:30px; height:30px; margin: 0 0;">
+          <p style="margin:0; font-weight:bold;">Gmail : </p>
+          <p>jirapol.phongtong@gmial.com</p>
+        </div>
+
+      </section>
+
+      <section class="Experience card" id="Experience" style="padding:20px; border-radius:12px; text-align:center;">
+        <h2>Experience (Tutor)</h2>
+        <div style="display:flex; justify-content:center; align-items:center; gap: 8px; margin-bottom:20px;">
+          <img src="IG.png" alt="Instagram" style="width:30px; height:30px;">
+          <p style="margin:0; font-weight:bold;">IG :</p>
+          <a href="https://www.instagram.com/tuktuk.tutor" style="color: black;">tuktuk.tutor</a>
+        </div>
 
 
-<main class="container person-page">
-<section class="about card">
-<h2>About</h2>
-<div class="about-grid">
-<img class="avatar" src="https://via.placeholder.com/220?text=Person+1" alt="Person 1">
-<div>
-<h3>John Doe</h3>
-<p>Age: 25</p>
-<p>University: Example University</p>
-<p>Major: Computer Engineering</p>
-<p>Hobbies: Coding, Guitar, Photography</p>
-</div>
-</div>
-</section>
+        <div style="margin-top:20px;">
+          <iframe width="560" height="315" src="//www.youtube.com/embed/sqN6Pri7_G0?si=kIWAqHwBDlhS9oo5"
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+          </iframe>
+        </div>
+      </section>
 
+  </main>
 
-<section class="showcase card">
-<h2>Showcase</h2>
-<ul>
-<li><strong>Project A</strong> — Task Tracking Website</li>
-<li><strong>Skills</strong> — HTML, CSS, JS, Python</li>
-<li><strong>Experience</strong> — Internship at Example Co.</li>
-</ul>
-</section>
+  <footer class="site-footer">
+    <div class="container">© 2025 Jirapol Pongthong</div>
+  </footer>
 
-
-<section class="contact card">
-<h2>Contact</h2>
-<p>Connect with me:</p>
-<p>
-<a href="#">Instagram</a> · <a href="#">GitHub</a> · <a href="#">LinkedIn</a>
-</p>
-</section>
-</main>
-
-
-<footer class="site-footer">
-<div class="container">© 2025 John Doe</div>
-</footer>
-<script src="script.js"></script>
+  <script src="styles.js"></script>
 </body>
 </html>
