--- a/ruch_project/person2.html
+++ b/ruch_project/person2.html
@@ -1,64 +1,83 @@
+<!DOCTYPE html>
 <html lang="th">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Person 2 — Portfolio</title>
-<link rel="stylesheet" href="styles.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Portfolio — Jirayu</title>
+    <link rel="stylesheet" href="dear_page_style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header class="site-header">
-        <div class="container header-flex">
-            <h1 class="brand">Person 2</h1>
-            <nav class="nav" id="main-nav-1">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="person1.html" class="nav-link">Person 1</a>
-                <a href="person2.html" class="nav-link">Person 2</a>
-            </nav>
-            <button id="menu-toggle-1" class="menu-toggle">☰</button>
-        </div>
+      <div class="container">
+        <h1 class="brand">Jirayu</h1>
+        <nav class="nav" id="main-nav">
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="#about" class="nav-link">About Me</a>
+          <a href="#showcase" class="nav-link">Showcase</a>
+          <a href="#contact" class="nav-link">Contact</a>
+        </nav>
+        <button id="random-color-btn" class="btn">🎨 Random Color</button>
+        <button id="menu-toggle" class="menu-toggle">☰</button>
+      </div>
     </header>
 
+    <main class="container person-page">
+      <section class="about card">
+        <section id="about">
+          <h2>About Me</h2>
+          <p>
+            ผมชื่อจิรายุ พุ่มศิริ อายุ 19 ปี เกิดวันที่ 23/07/2006
+            กำลังศึกษาอยู่ที่สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง
+            คณะวิศวกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์งาน อดิเรกคือฟังเพลง
+          </p>
+        </section>
+        <div class="about-grid">
+          <img class="avatar" src="dear.jpg" alt="Person 1" />
+          <div>
+            <h3>Jirayu Phumsiri</h3>
+            <p>Age: 19</p>
+            <p>University: King Mongkut's Institute of Technology Ladkrabang</p>
+            <p>Major: Computer Engineering</p>
+            <p>Hobbies: Coding, listen to music, self-learn</p>
+          </div>
+        </div>
+      </section>
 
-<main class="container person-page">
-<section class="about card">
-<h2>About</h2>
-<div class="about-grid">
-<img class="avatar" src="https://via.placeholder.com/220?text=Person+1" alt="Person 1">
-<div>
-<h3>John Doe</h3>
-<p>Age: 25</p>
-<p>University: Example University</p>
-<p>Major: Computer Engineering</p>
-<p>Hobbies: Coding, Guitar, Photography</p>
-</div>
-</div>
-</section>
+      <section class="showcase card" id="showcase">
+        <h2>Showcase</h2>
+        <ul>
+          <li>
+            <strong>Project</strong> — Web reserve court using OOP backend
+          </li>
+          <li><strong>Skills</strong> — Python, C, C#</li>
+          <li>
+            <strong>Experience</strong> — Internship Nurse Bangbo Hospital
+          </li>
+        </ul>
+      </section>
 
+      <section class="contact card" id="contact" style="padding:20px; border-radius:12px;">
+        <h2>Contact</h2>
+        <div style="display:flex; align-items:center; gap: 8px ;margin-bottom:10px; ">
+          <img src="github.png" alt="GitHub" style="width:30px; height:30px; margin: 0 0;">
+          <p style="margin:0; font-weight:bold;">GitHub : </p>
+          <a href="https://github.com/JirayuDear" style="color: black; ">JirayuDear</a>
+        </div>
+        <div style="display:flex; align-items:center; gap: 8px ;margin-bottom:10px; ">
+          <img src="gmail.png" alt="GitHub" style="width:30px; height:30px; margin: 0 0;">
+          <p style="margin:0; font-weight:bold;">Gmail : </p>
+          <p>jirayuphumsiri@gmial.com</p>
 
-<section class="showcase card">
-<h2>Showcase</h2>
-<ul>
-<li><strong>Project A</strong> — Task Tracking Website</li>
-<li><strong>Skills</strong> — HTML, CSS, JS, Python</li>
-<li><strong>Experience</strong> — Internship at Example Co.</li>
-</ul>
-</section>
+      </section>
+    </main>
 
-
-<section class="contact card">
-<h2>Contact</h2>
-<p>Connect with me:</p>
-<p>
-<a href="#">Instagram</a> · <a href="#">GitHub</a> · <a href="#">LinkedIn</a>
-</p>
-</section>
-</main>
-
-
-<footer class="site-footer">
-<div class="container">© 2025 John Doe</div>
-</footer>
-<script src="script.js"></script>
-</body>
+    <footer class="site-footer">
+      <div class="container">© 2025 Jirayu Phumsiri</div>
+    </footer>
+    <script src="styles.js"></script>
+  </body>
 </html>
